Self to self & about page changes

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="resource/aos/aos.css">
         <script src="resource/aos/aos.js"></script>
 
-        <link rel="stylesheet" href="resource/Self.css">
+        <link rel="stylesheet" href="resource/self.css">
         <title>About Us - Meddyy</title>
     </head>
     <body>
@@ -45,16 +45,21 @@
                 </div>
             </nav>
         </header>
-        <section class="bg-dark">
+        <section class="bg-secondary">
             <section class="container text-white">
-                <div class="pt-5">
-                    <h3>Our Journey</h3>
-                    <p>Meddyy Pharmacy opened its first store on 23rd April 2013, under the guidance of our founder Mr. Raju Ratan. The first store opened in Greater Noida, and we continued to expand every year. Meddyy now has 20+ stores across Delhi NCR and all set to offer super-quick delivery services. 
+                <div class="row py-4">
+                    <div class="col-md-4 py-2">
+                        <img src="resource/gallery-10.jpg" id="about-img" alt="">
+                    </div>
+                    <div class="col-md-8 py-2">
+                        <h3>Our Journey</h3>
+                        <p>Meddyy Pharmacy opened its first store on 23rd April 2013, under the guidance of our founder Mr. Raju Ratan. The first store opened in Greater Noida, and we continued to expand every year. Meddyy now has 20+ stores across Delhi NCR and all set to offer super-quick delivery services. 
                         Our customers have always believed in our services, and working through their feedback, we constantly improve.
-                    </p>
+                        </p>
+                    </div>                    
                 </div>
-                <div class="row py-2">
-                    <div class="col-sm">
+                <div class="row py-4">
+                    <div class="col-md-4 py-2">
                         <h3>Why us?</h3>
                         <ul>
                             <li>Super-quick delivery</li>
@@ -64,15 +69,11 @@
                             <li>Certified, Trustworthy, and Safe</li>
                         </ul>
                     </div>
-                    <div class="col-sm">
-                        <img src="resource/Gallery-10.jpg" id="about-img" alt="">
+                    <div class="col-md-8 py-2">
+                        <h3>Certifications</h3>
+                        <p>Our Pharmacy is certified by <u>LegitScript</u>, a verification and monitoring service for online Pharmacies.
+                        Also, Meddyy is certified with <u>ISO/IEC 27001:2013</u>, a certification which lays out implementation and management guidelines to safeguard digital and paper information. This certification ensures that an organization has implemented the required steps to protect all sensitive information against unauthorized access.</p>
                     </div>
-                </div>
-                <div class="py-2">
-                    <h3>Certifications</h3>
-                    <p>Our Pharmacy is certified by <u>LegitScript</u>, a verification and monitoring service for online Pharmacies.</p>
-                    <p>Also, Meddyy is certified with <u>ISO/IEC 27001:2013</u>, a certification which lays out implementation and management guidelines to safeguard digital and paper information. This certification ensures that an organization has implemented the required steps to protect all sensitive information against unauthorized access.
-                    </p>
                 </div>
             </section>
         </section>
