--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="resource/aos/aos.css">
         <script src="resource/aos/aos.js"></script>
 
-        <link rel="stylesheet" href="resource/Self.css">
+        <link rel="stylesheet" href="resource/self.css">
         <title>Contact Us - Meddyy</title>
     </head>
     <body class="bg-light">
