--- a/order.html
+++ b/order.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="resource/aos/aos.css">
         <script src="resource/aos/aos.js"></script>
 
-        <link rel="stylesheet" href="resource/Self.css">
+        <link rel="stylesheet" href="resource/self.css">
         <title>Order Now - Meddyy</title>
     </head>
     <body>
