--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <body class="bg-light">
         <header>
             <nav class="navbar navbar-expand-md sticky-top">
-                <a class="navbar-brand y-logo" href="home.html">
+                <a class="navbar-brand y-logo" href="index.html">
                     <img src="resource/Meddyy-logo.png" height="60px" alt="">
                     <span>Meddyy</span>
                 </a>
@@ -35,7 +35,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="collapsiblenavbar">
                     <ul class="navbar-nav mx-auto">
-                        <li><a href="home.html" class="nav-link">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="about.html" class="nav-link">About us</a></li>
                         <li><a href="contact.html" class="nav-link">Contact us</a></li>
                     </ul>
