--- a/order.html
+++ b/order.html
@@ -26,7 +26,7 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-md sticky-top">
-                <a class="navbar-brand y-logo" href="home.html">
+                <a class="navbar-brand y-logo" href="index.html">
                     <img src="resource/Meddyy-logo.png" height="60px" alt="">
                     <span>Meddyy</span>
                 </a>
@@ -35,12 +35,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="collapsiblenavbar">
                     <ul class="navbar-nav mx-auto">
-                        <li><a href="home.html" class="nav-link">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="about.html" class="nav-link">About us</a></li>
                         <li><a href="contact.html" class="nav-link">Contact us</a></li>
                     </ul>
                     <ul class="navbar-nav float-right">
-                        <li><a href="order.html" class="nav-link btn" id="order-btn">Order Now</a></li>
+                        <li><a href="order.html" class="nav-link btn" id="order-btn" target="_blank">Order Now</a></li>
                     </ul>
                 </div>
             </nav>
