--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
             </div> 
         </footer>
         </footer>
-        <p id="top-btn"><i class="fas fa-angle-double-up"></i></p>
+        <button id="top-btn"><img src="resource/top.png" height="80px" width="70px" alt=""></button>
     </body>
     <script>
 
