--- a/order.html
+++ b/order.html
@@ -136,7 +136,7 @@
                 </div> 
             </footer>
         </header>
-        <p id="top-btn"><i class="fas fa-angle-double-up"></i></p>
+        <button id="top-btn"><img src="resource/top.png" height="80px" width="70px" alt=""></button>
     </body>
     <script>
         $(window).scroll(function() {
