--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
                 </div>
             </div> 
         </footer>
-        <p id="top-btn"><i class="fas fa-angle-double-up"></i></p>
+        <button id="top-btn"><img src="resource/top.png" height="80px" width="70px" alt=""></button>
     </body>
     <script>
         $(window).scroll(function() {
