--- a/order.html
+++ b/order.html
@@ -106,7 +106,7 @@
                     <div class="col-md-4 mx-auto my-4 py-4">
                         <div class="my-4 py-4">
                             <h3> Call to order: </h3>
-                            <h4><a href="tel:983232XXXX" class="display-inline"><i class="fas fa-phone-alt"></i> 9832XXXXXX</a></h4>
+                            <h4 class="text-white"><a href="tel:983232XXXX" class="display-inline text-white"><i class="fas fa-phone-alt"></i> 9832XXXXXX</a></h4>
                         </div>
                         <div class="my-4 py-4">
                             <ul type="square">
